# metric-namespace-analysis

./: .gitignore  custom_metrics_tree.py  dev-notebook.ipynb  pyproject.toml  requirements.txt  test.ipynb
src/: custom_metrics_tree.py
test-data/: example-custom-metrics.csv
tests/: test_add_metric_namespace.py  test_cm-tree.py  test_data.csv  test_generate_cm_namespace_tree.py  test_read_custom_metrics_csv.py  test_utils.py
