[tool.poetry]
name = "metric-namespace-analysis"
version = "0.1.0"
description = ""
authors = ["rcskinner <ryan.skinner@datadoghq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
treelib = "^1.6.4"
jupyterlab = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
